reference/4_first_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  # replicas count
  replicas: 3

  # selector
  selector:
    matchLabels:
      app: nginx

  # pod template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        # image: nginx:1.16.1
        ports:
        - containerPort: 80
