reference/pod_rs_conflict.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    tier: backend
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
