reference/pod_secret_demo.yaml

apiVersion: v1
kind: Pod
metadata:
  name: secret-test
spec:
  volumes:
    - name: secret-volume-bs
      secret:
        secretName: secret-basic-auth
    - name: secret-volume-opaque
      secret: 
        secretName: secret-opaque
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
        - name: secret-volume-bs
          readOnly: true
          mountPath: "/etc/secret-volume-bs"
        - name: secret-volume-opaque
          readOnly: true
          mountPath: "/etc/secret-volume-opaque"
