reference/7_first_service.yaml
# kubectl port-forward service/my-service 8084:80

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
