reference/8_first_ingress.yaml
# minikube addons enable ingress
# kubectl get pods -n ingress-nginx
# minikube ip
# code c:\windows\system32\drivers\etc\hosts

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: our-nginx
spec:
  rules:
    - host: dns-configured-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
